[gd_scene load_steps=4 format=3 uid="uid://b6g6ifjvhn0j5"]

[ext_resource type="Script" path="res://pause/Pause.gd" id="1_utpe4"]
[ext_resource type="FontFile" uid="uid://dsg3v8pxmy0f8" path="res://fonts/monogram-extended.ttf" id="2_tkko1"]
[ext_resource type="Texture2D" uid="uid://c0msik101sqyk" path="res://sprites/pause_button.png" id="3_oq0ta"]

[node name="pause" type="CanvasLayer"]
script = ExtResource("1_utpe4")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0, 1)

[node name="GameTitleLabel" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -168.0
offset_top = 24.0
offset_right = 168.0
offset_bottom = 79.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_tkko1")
theme_override_font_sizes/font_size = 64
text = "Проект \"ИРТЫШ\""
horizontal_alignment = 1
vertical_alignment = 1

[node name="TipsTitleLabel" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -168.0
offset_top = 96.0
offset_right = 168.0
offset_bottom = 151.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_tkko1")
theme_override_font_sizes/font_size = 48
text = "Управление"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TipsLabel" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -27.5
offset_right = 192.0
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_tkko1")
theme_override_font_sizes/font_size = 32
text = "Максимально интуитивно, изучайте"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = 133.0
offset_right = 95.0
offset_bottom = 167.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_tkko1")
theme_override_font_sizes/font_size = 32
text = "Назад"

[node name="CreditsButton" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = 183.0
offset_right = 95.0
offset_bottom = 217.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_tkko1")
theme_override_font_sizes/font_size = 32
text = "Авторы"

[node name="PauseButton" type="TextureButton" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("3_oq0ta")

[connection signal="pressed" from="ColorRect/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="ColorRect/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
